--- a/src/app/footer/footer.html
+++ b/src/app/footer/footer.html
@@ -12,7 +12,9 @@
                     <div class="col-md-12">
                         <div class="row">
                             <div class="col-md-1 margin-top-20 padding-0">
-                                <div class="aboutus-logo"></div>
+                                <div >
+                                    <img class="aboutus-logo" src="/assets/defaultImages/about_us.jpg">
+                                </div>
                             </div>
                             <div class="col-md-11 ">
                                 <p class="text-left description">
