--- a/src/app/main/registration/registration.html
+++ b/src/app/main/registration/registration.html
@@ -2,7 +2,7 @@
     <div class=" col-md-4 col-md-offset-4 ">
 
         <div class="form-group">
-            <div class="col-md-12">
+            <div class="col-md-12 margin-top-15">
 
             <label> Marital Status<span style="color: red">*</span></label>
             <select class="form-control input-rounded "
@@ -20,7 +20,7 @@
                 </div>
         </div>
         <div class="form-group ">
-            <div class="col-md-12">
+            <div class="col-md-12 margin-top-15">
 
             <label> Caste<span style="color: red">*</span></label>
             <select class="form-control input-rounded " ng-model="step2.caste"
@@ -38,7 +38,7 @@
 
 
         <div class="form-group ">
-            <div class="col-md-12">
+            <div class="col-md-12 margin-top-15">
 
             <label> Country Living In<span style="color: red">*</span></label>
             <select class="form-control input-rounded " ng-model="step2.country"
@@ -56,7 +56,7 @@
 
 
         <div class="form-group ">
-            <div class="col-md-12">
+            <div class="col-md-12 margin-top-15">
 
             <label > State Living In<span style="color: red">*</span></label>
             <select class="form-control input-rounded " ng-model="step2.state"
@@ -73,7 +73,7 @@
 
 
         <div class="form-group ">
-            <div class="col-md-12">
+            <div class="col-md-12 margin-top-15">
 
             <label > City Living In<span style="color: red">*</span></label>
             <select class="form-control input-rounded " ng-model="step2.city"
@@ -90,7 +90,7 @@
 
 
         <div class="form-group ">
-            <div class="col-md-12">
+            <div class="col-md-12 margin-top-15">
 
             <label > Height<span style="color: red">*</span></label>
             <select class="form-control input-rounded " ng-model="step2.height">
@@ -161,7 +161,7 @@
 
 
         <div class="form-group ">
-            <div class="col-md-12">
+            <div class="col-md-12 margin-top-15">
 
             <label> Highest Education<span style="color: red">*</span></label>
             <select class="form-control input-rounded " ng-model="setProfession.education"
@@ -177,7 +177,7 @@
 
 
         <div class="form-group ">
-            <div class="col-md-12">
+            <div class="col-md-12 margin-top-15">
 
             <label> Occupation<span style="color: red">*</span></label>
             <select class="form-control input-rounded " ng-model="setProfession.occupation"
