--- a/src/app/main/registration2/registrationStep2.html
+++ b/src/app/main/registration2/registrationStep2.html
@@ -7,8 +7,12 @@
     <!-- BEGIN SAMPLE FORM PORTLET-->
     <div class="portlet light border-rounded" syle="margin-top:150px">
         <div >
-            <div  style="text-align: center">
-                <h5><strong>You have successfully registered with PeopleMatrimony. Your Member ID is {{memberId}}</strong></h5>            </div>
+            <div  style="text-align: center;">
+                <h4><strong>You have successfully registered with PeopleMatrimony.</strong></h4>
+            </div>
+            <div  style="text-align: center;margin-top: 20px">
+                <h4><strong>Your Member ID is {{memberId}}</strong></h4>
+            </div>
 
         </div>
         <div class="portlet-body form  form-horizontal">
