--- a/src/app/main/login/loginContent.html
+++ b/src/app/main/login/loginContent.html
@@ -43,7 +43,7 @@
                     <label class="col-md-4 control-label reg-label ">Name<span style="color: red">*</span></label>
 
                     <div class="col-md-8 text-box-width">
-                        <input type="text" required class="form-control  input-rounded" placeholder="Name" ng-model="reg.name">
+                        <input type="text" required capitalize-first class="form-control  input-rounded" placeholder="Name" ng-model="reg.name">
                     <span ng-if="showName">
                         <div class="user-error-msg-arrow" ></div>
                         <div class="user-error-msg" >{{nameMsg}}</div>
