--- a/src/app/toolbar/message/messagetoolbar.html
+++ b/src/app/toolbar/message/messagetoolbar.html
@@ -30,19 +30,19 @@
 							<ul class="dropdown-menu ">
 								<li>
 									<a ui-sref="customerCare" style="height: 50px;line-height: 50px;width: 100%;text-align: left;font-size: 15px" >
-										<i class="icon-lock"></i>Customer Care </a>
+										Customer Care </a>
 								</li>
 								<li>
 									<a ui-sref="contactUs" style="height: 50px;line-height: 50px;width: 100%;text-align: left;font-size: 15px" >
-										<i class="icon-lock"></i>Contact Us</a>
+										Contact Us</a>
 								</li>
 								<li>
 									<a ui-sref="feedback" style="height: 50px;line-height: 50px;width: 100%;text-align: left;font-size: 15px" >
-										<i class="icon-lock"></i>Feedback</a>
+										Feedback</a>
 								</li>
 								<li>
 									<a ui-sref="businessEnquires" style="height: 50px;line-height: 50px;width: 100%;text-align: left;font-size: 15px" >
-										<i class="icon-key"></i>Business Enquires</a>
+										Business Enquires</a>
 								</li>
 							</ul>
 						</li>
