--- a/src/app/main/view-profile/viewProfile.html
+++ b/src/app/main/view-profile/viewProfile.html
@@ -41,7 +41,11 @@
                                         </li>
                                         <li>
                                             <a href="javascript:;">
-                                                <i class="fa fa-send-o"></i> Send SMS </a>
+                                                <i class="fa fa-comment-o"></i> Send SMS </a>
+                                        </li>
+                                        <li>
+                                            <a ng-click="print()">
+                                                <i class="fa fa-print"></i> Print </a>
                                         </li>
                                         <li>
                                             <a ng-if="data.blocked == 'no'" ng-click="blockPartner()">
