--- a/src/app/main/registration2/registrationStep2.html
+++ b/src/app/main/registration2/registrationStep2.html
@@ -34,7 +34,7 @@
                     <form class="form-horizontal verify-form mb-20">
                         <div  class="col-md-4 col-md-offset-4" >
                             <label>Enter Pin</label>
-                            <input type="text"   ng-model="userPin" class="form-control">
+                            <input type="text"   style="text-align: center;" ng-model="userPin" class="form-control">
 
                             <br/>
                             <a ng-click="pinVerify();" class="btn btn-success btn-sm">Verfiy</a>
