--- a/src/app/footer/footer.html
+++ b/src/app/footer/footer.html
@@ -33,8 +33,7 @@
                                         <h4 class="heading"> Need Help</h4>
                                     </div>
                                     <div class="col-md-12">
-                                        <span class="description" ng-if="showLink"> <a ui-sref="customerCare" target="_blank">24X7 Live help</a> | <a ui-sref="contactUs" target="_blank">Contact Us</a> | <a ui-sref="feedback" target="_blank">Feedback</a> |<a ui-sref="businessEnquires" target="_blank">FAQ</a> </span>
-                                        <span class="description" ng-if="!showLink"> <a ui-sref="customerCare" target="_blank">24X7 Live help</a> | <a >Contact Us</a> | <a >Feedback</a> |<a >FAQ</a> </span>
+                                        <span class="description"> <a ui-sref="customerCare" target="_blank">24X7 Live help</a> | <a ui-sref="contactUs" target="_blank">Contact Us</a> | <a ui-sref="feedback" target="_blank">Feedback</a> |<a ui-sref="businessEnquires" target="_blank">FAQ</a> </span>
                                     </div>
                                 </div>
                             </div>
