--- a/src/app/main/help/busEnquires/busEnquires.html
+++ b/src/app/main/help/busEnquires/busEnquires.html
@@ -16,7 +16,7 @@
                         <label class="font-weight "> Your Name</label>
 
                         <input type="text" class="form-control  input-rounded"
-                               ng-model="business.name" readonly="readonly">
+                               ng-model="business.name" ng-readonly="checked">
                         <div ng-if="!nameVal" style="color: red">Please enter your phone Number</div>
 
 
