--- a/src/app/main/login/loginContent.html
+++ b/src/app/main/login/loginContent.html
@@ -267,17 +267,17 @@
                 <div class="form-group text-dis">
                     <label class="col-md-4 col-xs-12 control-label reg-label">Mobile Number<span style="color: red">*</span></label>
 
-                    <!--<div class="col-md-2 col-xs-2" style="width: 110px">-->
-                        <!--<select class="form-control " required ng-model="reg.code">-->
-                            <!--<option ng-selected="true" selected="selected" value="91">+ 91</option>-->
-                            <!--<option value="04">+ 04</option>-->
-                            <!--<option value="90">+ 90</option>-->
-                            <!--<option value="54">+ 54</option>-->
-                            <!--<option value="65">+ 65</option>-->
-                        <!--</select>-->
-                    <!--</div>-->
+                    <div class="col-md-3 col-xs-2" style="min-width: 80px" >
+                        <select class="form-control " required ng-model="reg.code">
+                            <option ng-selected="true" selected="selected" value="91">+ 91</option>
+                            <option value="04">+ 04</option>
+                            <option value="90">+ 90</option>
+                            <option value="54">+ 54</option>
+                            <option value="65">+ 65</option>
+                        </select>
+                    </div>
 
-                    <div class="col-md-8 text-box-width">
+                    <div class="col-md-5">
                         <input type="text" numbers-only maxlength="10"
                                required class="form-control input-rounded" ng-model="reg.mobile" placeholder="Mobile Number">
                      <span ng-if="showMobileNumber">
