--- a/src/app/main/help/feedback/feedback.html
+++ b/src/app/main/help/feedback/feedback.html
@@ -13,7 +13,7 @@
                         <label class="font-weight "> Your Name <span style="color: red">*</span></label>
 
                         <input type="text" class="form-control  input-rounded"
-                               ng-model="business.name" readonly="readonly">
+                               ng-model="business.name" ng-readonly="checked">
 
 
                     </div>
@@ -43,7 +43,7 @@
                         <label class="font-weight ">Matrimony Id <span style="color: red">*</span></label>
 
                         <input type="text" class="form-control  input-rounded"
-                               ng-model="business.id" readonly="readonly">
+                               ng-model="business.id" ng-readonly="checked">
 
 
                     </div>
