--- a/src/app/main/login/login.css
+++ b/src/app/main/login/login.css
@@ -61,6 +61,7 @@
     color: #838383 !important;
 }
 .details{ font-size: 14px;
+    font-weight: 600;
     color: #373737 !important;
 text-transform: capitalize}
 
