--- a/src/app/main/matches/matches.html
+++ b/src/app/main/matches/matches.html
@@ -121,41 +121,41 @@
                                                 <tr>
                                                     <td width="30%" class="first-row">Age/Height</td>
                                                     <td width="5%">:</td>
-                                                    <td width="45%">{{item.age}},{{item.height}}</td>
+                                                    <td width="45%" class="details">{{item.age}},{{item.height}}</td>
                                                 </tr>
                                                 <tr>
                                                     <td class="first-row">Religion</td>
                                                     <td>:</td>
-                                                    <td>{{item.religion}}</td>
+                                                    <td class="details">{{item.religion}}</td>
                                                 </tr>
                                                 <tr>
                                                     <td class="first-row">Mother Tongue</td>
                                                     <td>:</td>
-                                                    <td>{{item.mothertongue}}</td>
+                                                    <td class="details">{{item.mothertongue}}</td>
                                                 </tr>
                                                 <tr>
                                                     <td class="first-row">Star</td>
                                                     <td>:</td>
-                                                    <td>{{item.star}}</td>
+                                                    <td class="details">{{item.star}}</td>
                                                 </tr>
                                                 <tr>
                                                     <td class="first-row">Education</td>
                                                     <td>:</td>
-                                                    <td>{{item.education}}</td>
+                                                    <td class="details">{{item.education}}</td>
                                                 </tr>
                                                 <tr>
                                                     <td class="first-row">Profession/Income</td>
                                                     <td>:</td>
-                                                    <td>{{item.occupation}},{{item.income}}</td>
+                                                    <td class="details">{{item.occupation}},{{item.income}}</td>
                                                 </tr>
                                                 <tr>
                                                     <td class="first-row">Location</td>
                                                     <td>:</td>
-                                                    <td>{{item.city_name}}</td>
+                                                    <td class="details">{{item.city_name}}</td>
                                                 </tr>
                                             </table>
                                         </div>
-                                        <div class="col-md-12"
+                                        <div class="col-md-12 details"
                                              style="margin-bottom: 10px;margin-top: 10px;font-size: 12px">
                                             {{item.about_family}}
                                         </div>
