--- a/src/app/navigation/searchresults/searchResultsNavigation.html
+++ b/src/app/navigation/searchresults/searchResultsNavigation.html
@@ -1,6 +1,6 @@
 <div class="page-sidebar-wrapper">
     <div class="page-sidebar navbar-collapse collapse" style="width:250px;background-color: #e4e8eb!important;">
-        <ul class="page-sidebar-menu   " style="background-color: white" data-keep-expanded="false"
+        <!--<ul class="page-sidebar-menu   " style="background-color: white" data-keep-expanded="false"
             data-auto-scroll="true" data-slide-speed="200">
 
 
@@ -27,7 +27,7 @@
                 </ul>
             </li>
         </ul>
-
+-->
         <ul class="page-sidebar-menu   " style="background-color: white" data-keep-expanded="false"
             data-auto-scroll="true" data-slide-speed="200">
 
