--- a/src/app/main/login/loginContent.html
+++ b/src/app/main/login/loginContent.html
@@ -357,9 +357,9 @@
     <div class="modal-body" id="modal-body">
 
         <div class="form-group">
-            <label class=" uppercase">Email / Mobile Number / Member Id</label>
+            <label class=" uppercase">Username</label>
             <input class="form-control spinner input-rounded" type="text"
-                   placeholder="USER NAME" ng-model="login.username" required/>
+                   placeholder="Email / Mobile Number / Member Id" ng-model="login.username" required/>
         </div>
         <div class="form-group">
             <label class=" uppercase"> Password</label>
