--- a/src/app/navigation/dashboard-right/dashBoardRight.html
+++ b/src/app/navigation/dashboard-right/dashBoardRight.html
@@ -99,7 +99,8 @@
                                                             <div class="col-xs-8 col-sm-8 col-md-7">
                                                                 <div class="row ">
                                                                     <div class="col-md-12">
-                                                        <span><span class="profile-name">{{occu.name}}</span>&nbsp;<span
+                                                        <span><a ng-click="viewProfile(occu.id_people)"
+                                                                 class="profile-name">{{occu.name}}</a>&nbsp;<span
                                                                 class="profile-id"> ({{occu.id_people}})</span></span>
                                                                     </div>
                                                                 </div>
@@ -157,7 +158,8 @@
                                                             <div class="col-xs-8 col-sm-8 col-md-7">
                                                                 <div class="row ">
                                                                     <div class="col-md-12">
-                                                        <span><span class="profile-name">{{occu.name}}</span>&nbsp;<span
+                                                        <span><a ng-click="viewProfile(occu.id_people)"
+                                                                 class="profile-name">{{occu.name}}</a>&nbsp;<span
                                                                 class="profile-id"> ({{occu.id_people}})</span></span>
                                                                     </div>
                                                                 </div>
@@ -216,7 +218,8 @@
                                                             <div class="col-xs-8 col-sm-8 col-md-7">
                                                                 <div class="row ">
                                                                     <div class="col-md-12">
-                                                        <span><span class="profile-name">{{occu.name}}</span>&nbsp;<span
+                                                        <span><a ng-click="viewProfile(occu.id_people)"
+                                                                 class="profile-name">{{occu.name}}</a>&nbsp;<span
                                                                 class="profile-id"> ({{occu.id_people}})</span></span>
                                                                     </div>
                                                                 </div>
@@ -273,7 +276,8 @@
                                                             <div class="col-xs-8 col-sm-8 col-md-7">
                                                                 <div class="row ">
                                                                     <div class="col-md-12">
-                                                        <span><span class="profile-name">{{occu.name}}</span>&nbsp;<span
+                                                        <span><a ng-click="viewProfile(occu.id_people)"
+                                                                 class="profile-name">{{occu.name}}</a>&nbsp;<span
                                                                 class="profile-id"> ({{occu.id_people}})</span></span>
                                                                     </div>
                                                                 </div>
