--- a/src/app/main/dashboard/dashboard.html
+++ b/src/app/main/dashboard/dashboard.html
@@ -17,7 +17,7 @@
                                     <div class="col-md-12">
                                         <div class="row">
                                             <div class="col-md-6">
-                                                <span class="profile-completeness-heading"> Complete your Profile</span>
+                                                <span class="profile-completeness-heading" style="font-weight: 600"> Complete your Profile</span>
                                             </div>
                                             <div class="col-md-6">
                                                 <uib-progressbar class="profile-progress-bar" animate="true"
@@ -174,7 +174,7 @@
                             <div class="portlet-title">
 
                                 <div class="caption ">
-                                    <span class="caption-subject"> Recently Updated</span>
+                                    <span class="caption-subject" style="font-weight: 600"> Recently Updated</span>
                                 </div>
 
                                 <div class="actions" ng-if="recentUpdated.matches.length > 3">
@@ -245,7 +245,7 @@
                         <div class="portlet light bordered">
                             <div class="portlet-title">
                                 <div class="caption ">
-                                    <span class="caption-subject  "> New Matches</span>
+                                    <span class="caption-subject" style="font-weight: 600"> New Matches</span>
                                 </div>
                                 <div class="actions" ng-if="newMatches.matches.length > 3">
                                     <div class="row">
@@ -317,7 +317,7 @@
                         <div class="portlet light bordered">
                             <div class="portlet-title">
                                 <div class="caption ">
-                                    <span class="caption-subject  ">Who viewed my Profile</span>
+                                    <span class="caption-subject" style="font-weight: 600">Who viewed my Profile</span>
                                 </div>
                                 <div class="actions" ng-if="viewed.matches.length > 3">
                                     <div class="row">
