--- a/src/app/navigation/dashboard/dbNavigation.html
+++ b/src/app/navigation/dashboard/dbNavigation.html
@@ -64,7 +64,7 @@
                     <li class="nav-item  active open">
                         <ul class="sub-menu">
                             <li class="nav-item nav-header">
-                                <span class=""><span class="nav-header-text">Inbox</span></span>
+                                <span class=""><span class="nav-header-text" style="font-weight: 600">Inbox</span></span>
                             </li>
                             <li ng-class="{ active: isActive('/app/pending')}" class="nav-item" >
                                 <a ui-sref="messages" class="nav-link ">
@@ -165,7 +165,7 @@
                     <li class="nav-item  active open">
                         <ul class="sub-menu">
                             <li class="nav-item nav-header">
-                                <span class=""><span class="nav-header-text">Explore</span></span>
+                                <span class=""><span class="nav-header-text" style="font-weight: 600">Explore</span></span>
                             </li>
                             <li ng-class="{ active: isActive('/app/pending')}" class="nav-item" >
                                 <a ui-sref="app.pending" class="nav-link ">
