--- a/src/app/main/search/regular/regular.html
+++ b/src/app/main/search/regular/regular.html
@@ -537,7 +537,7 @@
                                     <label class="checkbox-inline" class="custon-text">
                                         <input type="radio" icheckbox_flat-red class="icheck " name="mstatus" value="divorceAwaiting"
                                                ng-model="regular.maritalStatus">
-                                        Divorce awaiting</label>
+                                        Awaiting divorce</label>
                                 </div>
                             </div>
 
