--- a/src/app/main/view-profile/viewProfile.html
+++ b/src/app/main/view-profile/viewProfile.html
@@ -43,6 +43,10 @@
                                             <a href="javascript:;">
                                                 <i class="fa fa-comment-o"></i> Send SMS </a>
                                         </li>
+                                        Forward<li>
+                                            <a href="javascript:;">
+                                                <i class="fa fa-comment-o"></i> Send SMS </a>
+                                        </li>
                                         <li>
                                             <a ng-click="print()">
                                                 <i class="fa fa-print"></i> Print </a>
