--- a/src/app/main/managephotos/managephoto.html
+++ b/src/app/main/managephotos/managephoto.html
@@ -278,12 +278,12 @@
                                     Visible to all <i style="margin-left: 2px;" class="fa fa-question-circle"></i></label>
                             </div>
 
-                            <div class="col-md-12 margin-top-10 ">
+                            <!--<div class="col-md-12 margin-top-10 ">
                                 <label class="checkbox-inline" class="custon-text">
                                     <input type="radio" icheckbox_flat-red class="icheck " ng-model="privacy.photo"
                                             value="request" ng-click="changePhoto()">
                                     Visible to ony invitation sent/accepted <i style="margin-left: 2px;" class="fa fa-question-circle"></i></label>
-                            </div>
+                            </div>-->
                             <div class="col-md-12 margin-top-10 ">
                                 <label class="checkbox-inline" class="custon-text">
                                     <input type="radio" icheckbox_flat-red class="icheck " ng-model="privacy.photo"
