--- a/src/app/main/registration2/registrationStep2.html
+++ b/src/app/main/registration2/registrationStep2.html
@@ -37,7 +37,7 @@
                             <input type="text"   style="text-align: center;" ng-model="userPin" class="form-control">
 
                             <br/>
-                            <a ng-click="pinVerify();" class="btn btn-success btn-sm">Verfiy</a>
+                            <a ng-click="pinVerify();" class="btn  red btn-sm">Verfiy</a>
                                        </div>
                     </form>
 </div>
