--- a/src/app/main/message/sent/sent.html
+++ b/src/app/main/message/sent/sent.html
@@ -124,7 +124,12 @@
 
                         </div>
 </div>
-                        <mailbox mail="item.communication" user="item.user" res="type" reverse="sendRespond(data)"></mailbox>
+                        <div class="row pull-right">
+                            <div class="col-md-12 " >
+                           <a style="color: red" ng-click="moreConversation(item.user.id_people)"> 1+ conversation </a>
+                            </div>
+                        </div>
+                        <!--<mailbox mail="item.communication" user="item.user" res="type" reverse="sendRespond(data)"></mailbox>-->
                     </div>
 
                     <div class="row">
